@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 1.11
 
+- Modified the SMTP protocol module to export the SASL authentication
+  information internally.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
